@@ -12,6 +12,10 @@
         <dependency org="com.github.universal-automata" name="liblevenshtein" rev="3.0.0"/>  <!-- Levenshtein Automata -->
         <dependency org="com.google.errorprone" name="error_prone_annotations" rev="2.41.0"/>  <!-- annotations for compile checker -->
         <dependency org="org.yaml" name="snakeyaml" rev="2.4"/>  <!-- pasing YAML -->
+        <dependency org="org.jeasy" name="easy-rules-core" rev="4.1.0"/>  <!-- simple rule engine -->
+        <dependency org="org.jeasy" name="easy-rules-mvel" rev="4.1.0"/>  <!-- simple rule engine -->
+        <dependency org="org.jeasy" name="easy-rules-support" rev="4.1.0"/>  <!-- simple rule engine -->
+        <dependency org="org.mvel" name="mvel2" rev="2.5.2.Final"/>  <!-- java expression language -->
     </dependencies>
 </ivy-module>
 
