@@ -13,10 +13,12 @@
     * Added feature to provide custom data model for input graphs.
     * Added feature to provide custom base namespace for reconstructed
       individuals.
+    * Added feature to provide custom validation rule set for processess.
     * Changed intermediate CSV result structure to ensure consistency between
       different modi.
     * Change generation of reconstructed person identifiers to be based on
       person IDs, ensuring consistency between runs. URIs starting with 'I-'
       pertain between runs; those starting with 'U-' can change.
     * Split reconstruction output in linked and unlinked individuals.
+    * Added header to links-individuals file.
     * Moved from Maven to Ant build tool (incl Ivy) to simplify compiling.
